<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Please put your application's app ID and keys here -->
    <string name="parse_app_id">hhK2e56IYofzH8HTuoXskijZnRODN64N8r7W31Hk</string>
    <string name="parse_client_key">P3lkYbVuu6xdi00lfJJGHZOSjYsgqC5g5ygXTMuo</string>
    <string name="facebook_app_id">1420307701631075</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret">YOUR_TWITTER_CONSUMER_SECRET</string>

    <string name="app_name">Parse Login Sample Basic</string>
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>

    <string name="interested_button">Im Interested!</string>
    <string name="next_button">Next</string>
    <string name="explorer_name">Name</string>
    <string name="going_to">is going to</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="date_time">at Date and Time</string>
    <string name="explorer_description">Description</string>
    <string name="invite_friend">Invite a Friend!</string>
    <string name="change_location">Change Location</string>
</resources>
