<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_container"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:id="@+id/profile_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_gravity="center"
            android:id="@+id/own_pic_display"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explorer_name"
            android:textSize="30sp"
            android:padding="5dp"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="15sp"
            android:padding="5dp"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/change_location_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/change_location"/>

        <Button
            android:id="@+id/invite_friend_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/invite_friend"/>

    </LinearLayout>

</RelativeLayout>